# qual

./: .env.example  README.md  alembic.ini  main.code-workspace  pyproject.toml
.devcontainer/: Dockerfile  (+3 more)
backend/: .env.example  .gitignore  ABOUT.md  README.md  alembic.ini  pyproject.toml
backend/qual/: __init__.py  __main__.py  main.py  sqla_model.py
backend/qual/alembic/: env.py
backend/qual/alembic/versions/: 54f76400c733_seed_apps_user_填充admin用户.py  64d80d8ac661_.py  8da48a3b5e43_migrations_apps_user_建表.py  9ece2b9a3be2_create_user.py  a825378316b0_创建用户表.py  cfa82034c941_init.py  d5b8374150b4_create_user.py
backend/qual/apps/: __init__.py
backend/qual/apps/auth/: __app__.py  constant.py  dao.py  dependency.py  model.py  router.py  schema.py  settings.py  utils.py
backend/qual/apps/department/: model.py
backend/qual/apps/device/: __app__.py  __init__.py  _model.py
backend/qual/apps/dictionary/: __app__.py  model.py  router.py  schema.py
backend/qual/apps/permission/: model.py
backend/qual/apps/user/: __app__.py  __seed__.py  constant.py  dao.py  model.py  router.py  schema.py
backend/qual/cli/: __init__.py  database.py
backend/qual/core/: __init__.py  authentication.py  config.py  database.py  logger.py  scope.py  settings.py  xyapi.py
backend/qual/core/xyapi/: __init__.py  auto_discover.py  exception.py  security.py  settings.py  xyapp.py
backend/qual/depends/: authentication.py
backend/qual/migrations/: env.py  seeds.py
backend/qual/seed/: env.py
backend/qual/xycasbin/: __init__.py
backend/tests/core/: test_auto_discover.py
(+55 files in other folders)
