[tool.poetry]
name = "qual"
version = "0.1.0"
description = "这是一段描述"
authors = ["kaluluosi111 <kaluluosi@gmail.com>"]
readme = "ABOUT.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"

[tool.ruff]
line-length = 120

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
ruff = "^0.0.289"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
